--- a/impressum.html
+++ b/impressum.html
@@ -39,7 +39,7 @@
 					<div class="span12">
                         
                         <div class="title"><h1><span class="color-text">Impressum:</span></h1></div>
-                        <div class="sub-caption"><h5>CXP Commerce Experts UG (haftungsbeschr&auml;nkt) i.G.</h5></div>                        
+                        <div class="sub-caption"><h5>CXP Commerce Experts UG (haftungsbeschr&auml;nkt) </h5></div>                        
                         <p>Technologieberatungs- &amp; Softwarehaus
                         </br>Schulerstrasse 2
                         </br>75180 Pforzheim - Germany</p>
@@ -52,7 +52,7 @@
 
                         <p>Handelsregister:
                         </br>Amtsgericht Mannheim
-                        </br>HRB xxxxx</p>
+                        </br>HRB 720628</p>
 
                         <p>Umsatzsteueridentifikationsnummer nach §27a Umsatzsteuergesetz:
                         </br>DE xxxxxxxx xx</p>
@@ -68,11 +68,11 @@
                         <p></p>
                         <div class="title"><h2><span class="color-text">Haftungsausschluss:</span></h2></div>
                         <div class="sub-caption"><h5>Haftungsausschluss</h5></div>                        
-                        <p>Die CXP Commerce Experts UG (haftungsbschr&auml;nkt) i.G. &uuml;bernimmt keine Garantie daf&uuml;r, dass die auf dieser Website bereitgestellten Informationen vollst&auml;ndig, richtig und in jedem Falle aktuell sind. Dies gilt auch f&uuml;r alle Verbindungen (“Links”), die von dieser Website direkt oder indirekt verweisen. Die CXP Commerce Experts UG (haftungsbschr&auml;nkt) i.G. ist f&uuml;r den Inhalt einer Seite, die mit einem Link erreicht wird, nicht verantwortlich. Die CXP  Commerce Experts UG (haftungsbschr&auml;nkt) i.G. beh&auml;lt sich das Recht vor, ohne vorherige Ank&uuml;ndigung &Auml;nderungen oder Erg&auml;nzungen der bereitgestellten Informationen vorzunehmen.</p>
+                        <p>Die CXP Commerce Experts UG (haftungsbschr&auml;nkt) &uuml;bernimmt keine Garantie daf&uuml;r, dass die auf dieser Website bereitgestellten Informationen vollst&auml;ndig, richtig und in jedem Falle aktuell sind. Dies gilt auch f&uuml;r alle Verbindungen (“Links”), die von dieser Website direkt oder indirekt verweisen. Die CXP Commerce Experts UG (haftungsbschr&auml;nkt) ist f&uuml;r den Inhalt einer Seite, die mit einem Link erreicht wird, nicht verantwortlich. Die CXP  Commerce Experts UG (haftungsbschr&auml;nkt) beh&auml;lt sich das Recht vor, ohne vorherige Ank&uuml;ndigung &Auml;nderungen oder Erg&auml;nzungen der bereitgestellten Informationen vorzunehmen.</p>
 
-                        <p>Die CXP Commerce Experts UG (haftungsbschr&auml;nkt) i.G. begr&uuml;ndet durch die Bereitstellung dieser Informationen kein Vertragsangebot &uuml;ber Ausk&uuml;nfte, Beratung oder &auml;hnliche Vertragsbeziehungen. Jegliche Haftung f&uuml;r die Nutzung der Inhalte der Website oder die Richtigkeit der Inhalte oder die Erreichbarkeit der Website wird ausgeschlossen.</p>
+                        <p>Die CXP Commerce Experts UG (haftungsbschr&auml;nkt) begr&uuml;ndet durch die Bereitstellung dieser Informationen kein Vertragsangebot &uuml;ber Ausk&uuml;nfte, Beratung oder &auml;hnliche Vertragsbeziehungen. Jegliche Haftung f&uuml;r die Nutzung der Inhalte der Website oder die Richtigkeit der Inhalte oder die Erreichbarkeit der Website wird ausgeschlossen.</p>
 
-                        <p>Die CXP Commerce Experts UG (haftungsbschr&auml;nkt) i.G. haftet daher nicht f&uuml;r konkrete, mittelbare und unmittelbare Sch&auml;den oder Sch&auml;den, die durch fehlende Nutzungsm&ouml;glichkeiten, Datenverluste oder entgangene Gewinne entstehen k&ouml;nnen, die im Zusammenhang mit der Nutzung von Dokumenten oder Informationen entstehen, die auf dieser Website zug&auml;nglich sind.</p>                             
+                        <p>Die CXP Commerce Experts UG (haftungsbschr&auml;nkt) haftet daher nicht f&uuml;r konkrete, mittelbare und unmittelbare Sch&auml;den oder Sch&auml;den, die durch fehlende Nutzungsm&ouml;glichkeiten, Datenverluste oder entgangene Gewinne entstehen k&ouml;nnen, die im Zusammenhang mit der Nutzung von Dokumenten oder Informationen entstehen, die auf dieser Website zug&auml;nglich sind.</p>                             
 
                     </div>
                 </div>
@@ -82,7 +82,7 @@
                         <p></p>
 						<div class="title"><h2><span class="color-text">Datenschutz:</span></h2></div>
                         <div class="sub-caption"><h5>Ihre Daten bei uns</h5></div>                        
-                        <p>Die CXP Commerce Experts UG (haftungsbeschr&auml;nkt) i.G. verpflichtet sich, Ihre pers&ouml;nlichen Daten zu sch&uuml;tzen. Diese Datenschutzerkl&auml;rung beschreibt ausf&uauml;hrlich, welche Informationen wir &uuml;ber Sie erheben und was mit diesen Daten geschieht.</p>
+                        <p>Die CXP Commerce Experts UG (haftungsbeschr&auml;nkt) verpflichtet sich, Ihre pers&ouml;nlichen Daten zu sch&uuml;tzen. Diese Datenschutzerkl&auml;rung beschreibt ausf&uauml;hrlich, welche Informationen wir &uuml;ber Sie erheben und was mit diesen Daten geschieht.</p>
 
                         <p>Daher werden wir im Folgenden erkl&auml;ren, wie die Datenerhebung und Speicherung funktioniert und wie wir den Schutz Ihrer pers&ouml;nlichen Daten gew&auml;hrleisten, wenn Sie &uuml;ber diese Website Daten eingeben:</p>
                         <p></p>                        
@@ -96,7 +96,7 @@
                         <p></p>
 
                         <h4>3. Wie und von wem werden die Daten genutzt?</h4>
-                        <p>Die Daten werden ausschließlich zur Bearbeitung der Anfragen genutzt und nach Abschluss des Vorgangs gel&ouml;scht. Wir verarbeiten und nutzen Ihre Daten nur innerhalb der CXP Commerce Experts UG (haftungsbeschr&auml;nkt) i.G., um Ihnen die gew&uuml;nschten Informationen und Dienstleistungen anbieten zu k&ouml;nnen. Die Log-Informationen werden verwendet, um den Service von commerce-experts weiter zu verbessern und beinhalten keine pers&ouml;nliche Identifizierungsinformation.</p>
+                        <p>Die Daten werden ausschließlich zur Bearbeitung der Anfragen genutzt und nach Abschluss des Vorgangs gel&ouml;scht. Wir verarbeiten und nutzen Ihre Daten nur innerhalb der CXP Commerce Experts UG (haftungsbeschr&auml;nkt), um Ihnen die gew&uuml;nschten Informationen und Dienstleistungen anbieten zu k&ouml;nnen. Die Log-Informationen werden verwendet, um den Service von commerce-experts weiter zu verbessern und beinhalten keine pers&ouml;nliche Identifizierungsinformation.</p>
                         <p></p>
 
                         <h4>4. Wie messen wir die Besuche auf der Webseite?</h4>
@@ -112,7 +112,7 @@
                         <p></p>
 
                         <h4>6. Wie kann der Nutzer auf die Daten zugreifen, sie &auml;ndern oder l&ouml;schen?</h4>
-                        <p>Anfragen zur L&ouml;schung der Daten oder &auml;nderungsanfragen sind ebenso per E-Mail an die CXP Commerce Experts UG (haftungsbeschr&auml;nkt) i.G. zu richten: info[at]commerce-experts.com. Mit der Abmeldung des Newsletters werden auch die entsprechenden Daten gel&ouml;scht.</p>
+                        <p>Anfragen zur L&ouml;schung der Daten oder &auml;nderungsanfragen sind ebenso per E-Mail an die CXP Commerce Experts UG (haftungsbeschr&auml;nkt) zu richten: info[at]commerce-experts.com. Mit der Abmeldung des Newsletters werden auch die entsprechenden Daten gel&ouml;scht.</p>
                         <p></p>
 
                         <h4>7. Wie wird die Datensicherheit gew&auml;hrleistet?</h4>    
@@ -152,7 +152,7 @@
 		</section>
 		<!-- End Sidebar -->
 		<section id="copyright">
-			© 2014</br>CXP Commerce Experts UG (haftungsbeschr&auml;nkt) i.G.
+			© 2014</br>CXP Commerce Experts UG (haftungsbeschr&auml;nkt)
 		</section>
 	
     <!-- End Wrapper for Content -->
