--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@ Recommendation Engine"></a></li>
 		</section>
 		<!-- End Sidebar -->
 		<div id="copyright">
-			© 2014<br>CXP Commerce Experts UG (haftungsbeschr&auml;nkt) i.G.
+			© 2014<br>CXP Commerce Experts UG (haftungsbeschr&auml;nkt)
 		</div>
 	</div>
     <!-- End Wrapper for Content -->
