added new site media assets

--- a/index.html
+++ b/index.html
@@ -161,23 +161,24 @@
 						</div>
 						<div class="row">
 							<div class="span3">
-								<h3 style="font-size:0.92em">Produktsuche &amp; Navigation</h3>
+								<h3 style="font-size:0.85em"><span class="profile-icons">&#0035;</span>Suche &amp; Navigation</h3>
                                 <p>Wir helfen Ihnen dabei die perfekte L&ouml;sung f&uuml;r Ihre Produktsuche- &amp; Shop-Navigation zu finden. Auch w&auml;hrend der Integration und Feinjustierung von FACT-Finder, Fredhopper, Apache Solr oder Elasticsearch beraten und unterst&uuml;tzen wir Sie auf h&ouml;chstem Niveau bei allen Fragen in Bezug auf Produktsuche &amp; Navigation im Online Shop. Einzigartiges Expertenwissen rund um Europas f&uuml;hrende Ecommerce Suchl&ouml;sungen garantiert.</p>
-								<!-- <a href="http://www.commerce-experts.com/optimierung-der-produktsuche-und-navigation.html" class="btn small">Erfahren Sie mehr</a> -->
+								<!-- <a href="http://www.commerce-experts.com/optimierung-der-produktsuche-und-navigation.html" class="btn small">Mehr erfahren</a> -->
                                 <hr class="gray margin20 visible-phone"> 
 							</div>
 							<div class="span3">
-								<h3 style="font-size:0.92em">Data-Driven Commerce</h3>
+								<h3 style="font-size:0.85em"><span class="profile-icons">&#0113;</span>Data-Driven Commerce</h3>
 								<p>Ein integrierter, datengetriebener Ansatz ist Voraussetzung f&uuml;r eine zielorientierte und kanal&uuml;bergreifende Kundenansprache. Wir helfen Ihnen dabei Ihre Systeme (ERP, Produktsuche &amp; Navigation, Analytics, Guided Selling, Recommendation &amp; Personalisierung) zu verbinden, sie integriert zu nutzen und durch sequentielles datengetriebenes Testing systematisch zu optimieren.</p>
+                                <!-- <a href="http://www.commerce-experts.com/CXP-Conversion-Tuning.html" class="btn small">Mehr erfahren</a> -->
 								<hr class="gray margin20 visible-phone">
 							</div>
 							<div class="span3">
-								<h3 style="font-size:0.92em">Application Management</h3>
+								<h3 style="font-size:0.85em"><span class="profile-icons">&#0101;</span>Application Management</h3>
 								<p>Konzentrieren Sie sich auf die maßgeblichen Treiber Ihres Unternehmens und wir verantworten und optimieren Ihre Applikationen. Infrastruktur & Hosting in Verbindung mit ihren Risiken sind unsere Kernkompetenzen. Wir minimieren das Risiko durch garantierte Verf&uuml;gbarkeiten, Sie entscheiden die H&ouml;he Ihres Service Levels und Ihre Admins kommunizieren mit unserem Supportteam.</p>
 								<hr class="gray margin20 visible-phone">
 							</div>
 							<div class="span3">
-                                <h3 style="font-size:0.92em">Go-to-Market Strategy</h3>
+                                <h3 style="font-size:0.85em"><span class="profile-icons">&#161;</span>Go-to-Market Strategy</h3>
 								<p>Sie suchen einen kompetenten und verl&auml;sslichen Partner f&uuml;r den Vertrieb oder Ihre Go-to-Market Strategy Ihrer Software-L&ouml;sungen im europ&auml;ischen eCommerce Markt? Commerce Experts bietet Ihnen ein umfangreiches eCommerce Netzwerk und langj&auml;hrige Beziehungen zu H&auml;ndlern &amp; Agenturen und somit die Grundlage f&uuml;r einen schnellen Vertriebserfolg w&auml;hrend der Wachstumsphase.</p> 								
 							</div>
 						</div>
