--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 							<div class="span3">
 								<h3 style="font-size:0.85em"><span class="profile-icons">&#0113;</span>Data-Driven Commerce</h3>
 								<p>Ein integrierter, datengetriebener Ansatz ist Voraussetzung f&uuml;r eine zielorientierte und kanal&uuml;bergreifende Kundenansprache. Wir helfen Ihnen dabei Ihre Systeme (ERP, Produktsuche &amp; Navigation, Analytics, Guided Selling, Recommendation &amp; Personalisierung) zu verbinden, sie integriert zu nutzen und durch sequentielles datengetriebenes Testing systematisch zu optimieren.</p>
-                                <a href="http://www.commerce-experts.com/CXP-Conversion-Tuning-mit-Data-Driven-Commerce.html" class="btn small">Mehr erfahren</a> 
+                               <!-- <a href="http://www.commerce-experts.com/CXP-Conversion-Tuning-mit-Data-Driven-Commerce.html" class="btn small">Mehr erfahren</a> -->
 								<hr class="gray margin20 visible-phone">
 							</div>
 							<div class="span3">
