--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@ Recommendation Engine"></a></li>
 		</section>
 		<!-- End Sidebar -->
 		<div id="copyright">
-			© 2014<br>CXP Commerce Experts UG (haftungsbeschr&auml;nkt)
+			© 2014 - 2015<br>CXP Commerce Experts UG (haftungsbeschr&auml;nkt)
 		</div>
 	</div>
     <!-- End Wrapper for Content -->
