--- a/index.html
+++ b/index.html
@@ -282,13 +282,12 @@ Als Sales Director bei Commerce Experts verantwortet er den strategischen Vertri
 						<div class="vertical-text">
                             <h2 style="font-size:1.65em">Unsere preisgekr&ouml;nten Partner <span class="color-text">f&uuml;r Ihr Data-Driven eBusiness</span></h2>
 								<ul class="clients">
-									<li><a href="http://www.nosto.com/" title="CXP - Nosto Personalisierung und Recommendation"><img src="http://www.commerce-experts.com/img/partners/nosto-logo.png" title="Nosto erhöht die Gewinne von Online Shops durch ein personalisiertes Online-Shopping-Erlebnis" alt="Nosto - Die Plug-n-Play
-Recommendation Engine"></a></li>
                                     <li><a href="http://snowplowanalytics.com/" title="CXP - Event Analytics Plattform für Data-Driven eCommerce"><img src="http://www.commerce-experts.com/img/partners/snowplow-analytics.png" title="Die Komplettlösung für datengetriebenes und kundenzentriertes E-Commerce" alt="Snowplowanalytics - Die Data-Driven Event Analytic Plattform"></a></li>	
 									<li><a href="http://www.smartassistant.com/" title="CXP - Smartassistant Guided selling vom Marktführer"><img src="http://www.commerce-experts.com/img/partners/smartassistant-logo.png" title="Smartassistant hilft Ihren Kunden die Produkte zu kaufen, die sie lieben werden" alt="Smartassistant - The leading Technology for Interactive Product advice."></a></li>
-                                    <li><a href="http://www.adtelligence.de/"><img src="http://www.commerce-experts.com/img/partners/adtelligence-logo.png" title="Personalisierung & Customer Experience Management von Adtelligence" alt="Adtelligence - Steigern Sie Ihre Conversion-Rates durch Personalisierung & Customer Experience Management von Adtelligence"></a></li>
-									<li><a href="http://www.semknox.com/"><img src="http://www.commerce-experts.com/img/partners/semknox-logo.png" title="Smart Semantic Product Search" alt="Die Zukunft der Produktsuche"></a></li>                                    
-								</ul>
+                                    <li><a href="http://www.nosto.com/" title="CXP - Nosto Personalisierung und Recommendation"><img src="http://www.commerce-experts.com/img/partners/nosto-logo.png" title="Nosto erhöht die Gewinne von Online Shops durch ein personalisiertes Online-Shopping-Erlebnis" alt="Nosto - Die Plug-n-Play
+Recommendation Engine"></a></li>
+									<!-- <li><a href="http://www.semknox.com/"><img src="http://www.commerce-experts.com/img/partners/semknox-logo.png" title="Smart Semantic Product Search" alt="Die Zukunft der Produktsuche"></a></li>                                    
+								</ul> -->
 						</div>
 					</div>
 				</div>
