--- a/index.html
+++ b/index.html
@@ -287,8 +287,8 @@ Als Sales Director bei Commerce Experts verantwortet er den strategischen Vertri
                                     <li><a href="http://www.nosto.com/" title="CXP - Nosto Personalisierung und Recommendation"><img src="http://www.commerce-experts.com/img/partners/nosto-logo.png" title="Nosto erhöht die Gewinne von Online Shops durch ein personalisiertes Online-Shopping-Erlebnis" alt="Nosto - Die Plug-n-Play
 Recommendation Engine"></a></li>
                                     <li><a href="http://econda.com/" title="CXP - Web- & Shop-Analyse für Data-Driven eCommerce"><img src="http://www.commerce-experts.com/img/partners/econda-logo.png" title="CXP - Die Komplettlösung für datengetriebenes und kundenzentriertes E-Commerce" alt="econda Data-Driven E-Commerce"></a></li>
-									<!-- <li><a href="http://www.semknox.com/"><img src="http://www.commerce-experts.com/img/partners/semknox-logo.png" title="Smart Semantic Product Search" alt="Die Zukunft der Produktsuche"></a></li>                                    
-								</ul> -->
+									<li><a href="http://www.semknox.com/"><img src="http://www.commerce-experts.com/img/partners/semknox-logo.png" title="Smart Semantic Product Search" alt="Die Zukunft der Produktsuche"></a></li>                                    
+								</ul>
 						</div>
 					</div>
 				</div>
