--- a/index.html
+++ b/index.html
@@ -287,7 +287,8 @@ Als Sales Director bei Commerce Experts verantwortet er den strategischen Vertri
                                     <li><a href="http://www.nosto.com/" title="CXP - Nosto Personalisierung und Recommendation"><img src="http://www.commerce-experts.com/img/partners/nosto-logo.png" title="Nosto erhöht die Gewinne von Online Shops durch ein personalisiertes Online-Shopping-Erlebnis" alt="Nosto - Die Plug-n-Play
 Recommendation Engine"></a></li>
                                     <li><a href="http://econda.com/" title="CXP - Web- & Shop-Analyse für Data-Driven eCommerce"><img src="http://www.commerce-experts.com/img/partners/econda-logo.png" title="CXP - Die Komplettlösung für datengetriebenes und kundenzentriertes E-Commerce" alt="econda - Data-Driven E-Commerce"></a></li>
-									<li><a href="http://www.semknox.com/"><img src="http://www.commerce-experts.com/img/partners/semknox-logo.png" title="CXP - Intelligente Semantische Produktsuche" alt="Semknox - Die Zukunft der Produktsuche"></a></li>                                    
+									<li><a href="http://www.semknox.com/"><img src="http://www.commerce-experts.com/img/partners/semknox-logo.png" title="CXP - Intelligente Semantische Produktsuche" alt="Semknox - Die Zukunft der Produktsuche"></a></li>
+                                    <li><a href="http://www.glassball.com/"><img src="http://www.commerce-experts.com/img/partners/glassball-logo.png" title="CXP - Realtime Personalization Engine" alt="Glassball - Turn Big Data into Serious Value"></a></li>
 								</ul>
 						</div>
 					</div>
