added new mebers

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ Bei Commerce Experts verantwortet er den Bereich eCommerce Consulting.</p>
 							<div class="profile-name">Mathias Duda</div>
 							<div class="profile-job">Gesch&auml;ftsf&uuml;hrer & Sales Director</div>
 							<div class="profile-desc">
-								<p>Mathias war zuletzt Vertriebsleiter bei dem f&uuml;hrenden internationalen Technologie-Unternehmen f&uuml;r Produktsuche &amp; Navigation und betreute mit seinem Team mehr als 1000 Kunden &amp; Partner im europ&auml;ischen eCommerce. <br>
+								<p>Mathias war zuletzt Vertriebsleiter bei dem f&uuml;hrenden internationalen Technologie-Unternehmen f&uuml;r Produktsuche &amp; Navigation und betreute mit seinem Team mehr als 1000 Kunden &amp; Partner im europ&auml;ischen eCommerce.<br>
 Als Sales Director bei Commerce Experts verantwortet er den strategischen Vertrieb sowie das Partnermangement.</p>
 							</div>
 							<ul class="profile-social-icons">
@@ -263,7 +263,37 @@ Als Sales Director bei Commerce Experts verantwortet er den strategischen Vertri
 								<li><a href="https://twitter.com/Andy_wagner1980" title="Andreas Wagner - Twitter"><span class="socicon">a</span></a></li>
 							</ul>
 						</div>
-						<!-- End Profile -->						
+						<!-- End Profile -->
+                    </div>
+                    <div class="row">    
+                        <!-- Start Profile -->
+						<div class="span4 profile">
+							<!-- <img src="http://www.commerce-experts.com/img/team/profile4.jpg" alt="rudolf batt"> -->
+							<div class="profile-name">Rudolf Batt</div>
+							<div class="profile-job">Software Engineer</div>
+							<div class="profile-desc">
+								<p>Rudolf war lange Jahre in Professional Services &amp; Forschung bei einem f&uuml;hrenden internationalen Technologie-Unternehmen f&uuml;r Produktsuche &amp; Navigation mit mehr als 1000 Kunden im europ&auml;ischen eCommerce t&auml;tig. <br>
+Bei Commerce Experts ist er für die Weiterentwicklung unseres Technologie-Stacks verantwortlich.</p>
+							</div>
+							<ul class="profile-social-icons">
+								<li><a href="https://www.xing.com/profile/Rudolf_Batt" title="Rudolf Batt - Xing"><span class="socicon">l</span></a></li>
+							</ul>
+						</div>
+						<!-- End Profile -->
+                        <!-- Start Profile -->
+						<div class="span4 profile">
+							<!-- <img src="http://www.commerce-experts.com/img/team/profile5.jpg" alt="Gabriel Bauer"> -->
+							<div class="profile-name">Gabriel Bauer</div>
+							<div class="profile-job">Software Engineer</div>
+							<div class="profile-desc">
+								<p>Gabriel war lange Jahre in Professional Services bei einem f&uuml;hrenden internationalen Technologie-Unternehmen f&uuml;r Produktsuche &amp; Navigation mit mehr als 1000 Kunden im europ&auml;ischen eCommerce t&auml;tig. <br>
+Bei Commerce Experts ist er für die Weiterentwicklung unseres Technologie-Stacks verantwortlich.</p>
+							</div>
+							<ul class="profile-social-icons">
+								<li><a href="https://www.xing.com/profile/Gabriel_Bauer9" title="Gabriel Bauer - Xing"><span class="socicon">l</span></a></li>
+							</ul>
+						</div>
+						<!-- End Profile -->
 						
 					</div>
 				</div>
@@ -320,35 +350,7 @@ Recommendation Engine"></a></li>
 						</div>
 					</div>
 				</div>
-                <!--
-				<div class="row">
-					<div class="span12">
-						<hr class="feedbackline">
-						<div class="result">
-						</div>
-					</div>
-				</div>
-                -->
-				<!-- Start Form
-				<form class="well">
-					<div class="row">
-						<div class="span6 pull-left">
-							<label>Ihr Name</label>
-							<input class="span6" type="text" name="name" placeholder="Ihr Name">
-						</div>
-						<div class="span6 pull-right">
-							<label>Ihre e-mail</label>
-							<input class="span6" type="text" name="email" placeholder="Ihre E-mail Adresse">
-						</div>
-					</div>
-					<div class="row">
-						<div class="span12 textarea-margin">
-							<label>Ihre Nachricht</label>
-							<textarea class="span12" rows="8" name="message" placeholder="Ihre Nachricht"></textarea>
-							<button type="submit" class="btn"><i class="web-icon">8</i>Nachricht senden</button>
-						</div>
-					</div>
-				</form> -->
+                
                 <script type="text/javascript">
 /* var bcf_settings = { buttonText:'Contact Us', buttonTop:'30%', language:'en_US' }; // Better Contact Form Settings */
 (function (d, s, id) {
