added dynamic yield

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta charset="utf-8" />
     
 	<title>CXP Commerce-Experts | Data-Driven Multichannel eBusiness</title>
-    <link rel="icon" href="http://www.commerce-experts.com/img/favicon.ico">
+    <link rel="icon" type="image/png" href="http://www.commerce-experts.com/img/favicon.ico">
     <link rel="profile" href="http://gmpg.org/xfn/11" />
     
     <!-- Some SEO stuff -->
@@ -315,10 +315,10 @@ Bei Commerce Experts ist er für die Weiterentwicklung unseres Technologie-Stack
                                     <li><a href="http://snowplowanalytics.com/" title="CXP - Event Analytics Plattform für Data-Driven eCommerce"><img src="http://www.commerce-experts.com/img/partners/snowplow-analytics.png" title="Die Komplettlösung für datengetriebenes und kundenzentriertes E-Commerce" alt="Snowplowanalytics - Die Data-Driven Event Analytic Plattform"></a></li>
 									<li><a href="http://www.smartassistant.com/" title="CXP - Smartassistant Guided selling vom Marktführer"><img src="http://www.commerce-experts.com/img/partners/smartassistant-logo.png" title="Smartassistant hilft Ihren Kunden die Produkte zu kaufen, die sie lieben werden" alt="Smartassistant - The leading Technology for Interactive Product advice."></a></li>
                                     <li><a href="http://www.nosto.com/" title="CXP - Nosto Personalisierung und Recommendation"><img src="http://www.commerce-experts.com/img/partners/nosto-logo.png" title="Nosto erhöht die Gewinne von Online Shops durch ein personalisiertes Online-Shopping-Erlebnis" alt="Nosto - Die Plug-n-Play
-Recommendation Engine"></a></li>
-                                    <li><a href="http://econda.com/" title="CXP - Web- & Shop-Analyse für Data-Driven eCommerce"><img src="http://www.commerce-experts.com/img/partners/econda-logo.png" title="CXP - Die Komplettlösung für datengetriebenes und kundenzentriertes E-Commerce" alt="econda - Data-Driven E-Commerce"></a></li>
+Recommendation Engine"></a></li>                                    
 									<li><a href="http://www.semknox.com/"><img src="http://www.commerce-experts.com/img/partners/semknox-logo.png" title="CXP - Intelligente Semantische Produktsuche" alt="Semknox - Die Zukunft der Produktsuche"></a></li>
                                     <li><a href="http://www.glassball.com/"><img src="http://www.commerce-experts.com/img/partners/glassball-logo.png" title="CXP - Realtime Personalization Engine" alt="Glassball - Turn Big Data into Serious Value"></a></li>
+                                    <li><a href="http://dynamicyield.com/" title="CXP - Unified Customer Engagement für Data-Driven eCommerce"><img src="http://www.commerce-experts.com/img/partners/dynamicyield-logo.png" title="CXP - Die Komplettlösung für datengetriebenes und kundenzentriertes E-Commerce" alt="Dynamic Yield - Data-Driven E-Commerce"></a></li>
 								</ul>
 						</div>
 					</div>
