--- a/index.html
+++ b/index.html
@@ -282,6 +282,21 @@ Bei Commerce Experts ist er für die Weiterentwicklung unseres Technologie-Stack
 						<!-- End Profile -->
                         <!-- Start Profile -->
 						<div class="span4 profile">
+							<!-- <img src="http://www.commerce-experts.com/img/team/profile4.jpg" alt="rudolf batt"> -->
+							<div class="profile-name">Arne Heinemeyer</div>
+							<div class="profile-job">Search Engine Consultant</div>
+							<div class="profile-desc">
+								<p>Arne war lange Jahre in Professional Services bei einem f&uuml;hrenden internationalen Technologie-Unternehmen f&uuml;r Produktsuche &amp; Navigation mit mehr als 1000 Kunden im europ&auml;ischen eCommerce t&auml;tig. <br>
+Bei Commerce Experts betreut er zahlreiche Kunden als Search Engine Consultant.</p>
+							</div>
+							<ul class="profile-social-icons">
+								<li><a href="https://www.xing.com/profile/Arne_Heinemeyer" title="Arne Heinemeyer - Xing"><span class="socicon">l</span></a></li>
+                                <li><a href="https://www.linkedin.com/in/arne-heinemeyer-2282a694" title="Arne Heinemeyer - LinkedIn"><span class="socicon">j</span></a></li>
+							</ul>
+						</div>
+						<!-- End Profile -->
+                        <!-- Start Profile -->
+						<div class="span4 profile">
 							<!-- <img src="http://www.commerce-experts.com/img/team/profile5.jpg" alt="Gabriel Bauer"> -->
 							<div class="profile-name">Gabriel Bauer</div>
 							<div class="profile-job">Software Engineer</div>
