--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ Als Sales Director bei Commerce Experts verantwortet er den strategischen Vertri
 						<div class="span4 profile">
 							<!-- <img src="http://www.commerce-experts.com/img/team/profile4.jpg" alt="rudolf batt"> -->
 							<div class="profile-name">Rudolf Batt</div>
-							<div class="profile-job">Software Engineer</div>
+							<div class="profile-job">Senior Software Engineer</div>
 							<div class="profile-desc">
 								<p>Rudolf war lange Jahre in Professional Services &amp; Forschung bei einem f&uuml;hrenden internationalen Technologie-Unternehmen f&uuml;r Produktsuche &amp; Navigation mit mehr als 1000 Kunden im europ&auml;ischen eCommerce t&auml;tig. <br>
 Bei Commerce Experts ist er für die Weiterentwicklung unseres Technologie-Stacks verantwortlich.</p>
@@ -284,7 +284,7 @@ Bei Commerce Experts ist er für die Weiterentwicklung unseres Technologie-Stack
 						<div class="span4 profile">
 							<!-- <img src="http://www.commerce-experts.com/img/team/profile4.jpg" alt="rudolf batt"> -->
 							<div class="profile-name">Arne Heinemeyer</div>
-							<div class="profile-job">Search Engine Consultant</div>
+							<div class="profile-job">Senior Software Engineer</div>
 							<div class="profile-desc">
 								<p>Arne war lange Jahre in Professional Services bei einem f&uuml;hrenden internationalen Technologie-Unternehmen f&uuml;r Produktsuche &amp; Navigation mit mehr als 1000 Kunden im europ&auml;ischen eCommerce t&auml;tig. <br>
 Bei Commerce Experts betreut er zahlreiche Kunden als Search Engine Consultant.</p>
