--- a/index.html
+++ b/index.html
@@ -57,8 +57,15 @@
           'callback=initialize';
       document.body.appendChild(script);
     }
-
     window.onload = loadScript;        
+    </script>
+    <script type="text/javascript">
+    window.smartlook||(function(d) {
+    var o=smartlook=function(){ o.api.push(arguments)},h=d.getElementsByTagName('head')[0];
+    var c=d.createElement('script');o.api=new Array();c.async=true;c.type='text/javascript';
+    c.charset='utf-8';c.src='//rec.smartlook.com/recorder.js';h.appendChild(c);
+    })(document);
+    smartlook('init', 'ea04302ea2038b046ecada28b610918987447644');
     </script>
     
 </head>
