--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ Als Sales Director bei Commerce Experts verantwortet er den strategischen Vertri
 						<div class="span4 profile">
 							<!-- <img src="http://www.commerce-experts.com/img/team/profile3.jpg" alt="andreas wagner"> -->
 							<div class="profile-name">Andreas Wagner</div>
-							<div class="profile-job">Gesch&auml;ftsf&uuml;hrer &amp; Big Data Scientist</div>
+							<div class="profile-job">Gesch&auml;ftsf&uuml;hrer &amp; Data Scientist</div>
 							<div class="profile-desc">
 								<p>Andreas war zuletzt Leiter Produktmanagement bei dem f&uuml;hrenden internationalen Technologie-Unternehmen f&uuml;r Produktsuche &amp; Navigation mit mehr als 1000 Kunden & Partnern im europ&auml;ischen eCommerce. Als Big Data Scientist bei Commerce Experts verantwortet er das Business Development und betreut s&auml;mtliche Big Data &amp; Personalisierungs Projekte.</p>
 							</div>
@@ -336,7 +336,8 @@ Bei Commerce Experts ist er für die Weiterentwicklung unseres Technologie-Stack
                                     <li><a href="http://www.nosto.com/" title="CXP - Nosto Personalisierung und Recommendation"><img src="http://www.commerce-experts.com/img/partners/nosto-logo.png" title="Nosto erhöht die Gewinne von Online Shops durch ein personalisiertes Online-Shopping-Erlebnis" alt="Nosto - Die Plug-n-Play
 Recommendation Engine"></a></li>                                    
 									<li><a href="http://www.semknox.com/"><img src="http://www.commerce-experts.com/img/partners/semknox-logo.png" title="CXP - Intelligente Semantische Produktsuche" alt="Semknox - Die Zukunft der Produktsuche"></a></li>
-                                    <li><a href="http://www.glassball.com/"><img src="http://www.commerce-experts.com/img/partners/glassball-logo.png" title="CXP - Realtime Personalization Engine" alt="Glassball - Turn Big Data into Serious Value"></a></li>
+                                    <li><a href="http://www.searchhub.io/"><img src="http://www.commerce-experts.com/img/partners/searchhub-logo.png" title="CXP - search platform independent,
+AI-powered search query intelligence API" alt="search|hub - Super charging your search engine"></a></li>
                                     <li><a href="http://dynamicyield.com/" title="CXP - Unified Customer Engagement für Data-Driven eCommerce"><img src="http://www.commerce-experts.com/img/partners/dynamicyield-logo.png" title="CXP - Die Komplettlösung für datengetriebenes und kundenzentriertes E-Commerce" alt="Dynamic Yield - Data-Driven E-Commerce"></a></li>
 								</ul>
 						</div>
