--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@ AI-powered search query intelligence API" alt="search|hub - Super charging your 
 								<div id="googleMap" style="width:100%;height:380px;"></div>	    
 							</div>
 							<div class="span4 address">
-								<div class="contact-name">CXP Commerce Experts UG (haftungsbeschr&auml;nkt)</div>
+								<div class="contact-name">CXP Commerce Experts GmbH</div>
 								<span class="profile-icons">&#0117;</span><h6> Standort</h6>
 								<p>Apartment 3 - Schulerstrasse 2 - 75180 Pforzheim</p>
 								<span class="profile-icons">&#0056;</span><h6> E-mail</h6><p>info[at]commerce-experts.com<br></p>
@@ -396,7 +396,7 @@ AI-powered search query intelligence API" alt="search|hub - Super charging your 
 					</div>
 					<div class="span4">
 						<h5>&Uuml;ber Commerce-Experts</h5>
-						<p>CXP Commerce Experts UG ist ein Technologieberatungs- &amp; Softwarehaus, dass sich auf die Optimierung komplexer datengetriebener Multichannel Projekte im digitalen Handel spezialisiert hat. Technologische Perfektion und datengetriebene Entscheidungen sind das R&uuml;ckgrat einer erfolgreichen eBusiness L&ouml;sung.</p>
+						<p>CXP Commerce Experts GmbH ist ein Technologieberatungs- &amp; Softwarehaus, dass sich auf die Optimierung komplexer datengetriebener Multichannel Projekte im digitalen Handel spezialisiert hat. Technologische Perfektion und datengetriebene Entscheidungen sind das R&uuml;ckgrat einer erfolgreichen eBusiness L&ouml;sung.</p>
 					</div>
                     <div class="span4">
 						<h5>Links</h5>
@@ -410,7 +410,7 @@ AI-powered search query intelligence API" alt="search|hub - Super charging your 
 		</section>
 		<!-- End Sidebar -->
 		<div id="copyright">
-			© 2014 - 2017<br>CXP Commerce Experts UG (haftungsbeschr&auml;nkt)
+			© 2014 - 2017<br>CXP Commerce Experts GmbH
 		</div>
 	</div>
     <!-- End Wrapper for Content -->
