--- a/index.html
+++ b/index.html
@@ -402,7 +402,8 @@ AI-powered search query intelligence API" alt="search|hub - Super charging your 
 						<h5>Links</h5>
                         <ul style="list-style-type:none">
                             <li><a href="http://www.commerce-experts.com" title="commerce-experts - Startseite"><span class="trigger">Startseite</span></a></li>
-                            <li><a href="http://www.commerce-experts.com/impressum.html" title="commerce-experts - Impressum"><span class="trigger">Impressum</span></a></li> 
+                            <li><a href="http://www.commerce-experts.com/impressum.html" title="commerce-experts - Impressum"><span class="trigger">Impressum</span></a></li>
+                            <li><a href="http://www.commerce-experts.com/agbs.html" title="commerce-experts - Impressum"><span class="trigger">AGBs</span></a></li>
                         </ul>
 					</div>
 				</div>
