--- a/impressum.html
+++ b/impressum.html
@@ -145,6 +145,7 @@
                         <ul style="list-style-type:none">
                             <li><a href="http://www.commerce-experts.com"><span class="trigger">Startseite</span></a></li>
                             <li><a href="http://www.commerce-experts.com/impressum.html"><span class="trigger">Impressum</span></a></li>
+                            <li><a href="http://www.commerce-experts.com/agb.html" title="commerce-experts - Impressum"><span class="trigger">AGB</span></a></li>
                         </ul>
 					</div>
 				</div>
