--- a/index.html
+++ b/index.html
@@ -365,7 +365,8 @@ AI-powered search query intelligence API" alt="search|hub - Super charging your 
 								<span class="profile-icons">&#0117;</span><h6> Standort</h6>
 								<p>Apartment 3 - Schulerstrasse 2 - 75180 Pforzheim</p>
 								<span class="profile-icons">&#0056;</span><h6> E-mail</h6><p>info[at]commerce-experts.com<br></p>
-                                <span class="profile-icons">&#0124;</span><h6> Telefon</h6><p>+49 7231 16 61 40-1</p>
+                                				<span class="profile-icons">&#0124;</span><h6> Telefon</h6><p>+49 7231 166-140-1</p>
+								<span class="profile-icons">&#0124;</span><h6> FAX</h6><p>+49 7231-203-676-4</p>
 							</div>
 						</div>
 					</div>
